:space_invader: fixed alignment in search form \o/

--- a/css/example-search-styles.css
+++ b/css/example-search-styles.css
@@ -1519,7 +1519,7 @@ button:focus {
     border-radius: 0;
     color: #fff;
     cursor: pointer;
-    font-size: 1rem;
+    font-size: inherit;
     font-weight: normal;
     height: 2rem;
     padding: 0 0.75rem;
